<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    
    	<ScrollView
    	    android:layout_width="match_parent"
    	    android:layout_height="wrap_content" >
        
        <RelativeLayout
            android:gravity="center_horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >
            
           
            
            
    <TextView
        android:id="@+id/tab1totalscore"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        		android:layout_marginTop="30dp"
        android:layout_centerHorizontal="true"
        android:text="@string/zero"
        android:textAppearance="?android:attr/textAppearanceLarge" />
            
            
    <TextView
        android:id="@+id/goldenstats"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tab1totalscore"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:text="@string/goldenstars"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:drawableLeft="@drawable/goldstar"
        android:drawableRight="@drawable/goldstar" />
    
    <TextView
        android:id="@+id/goldcount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/goldenstats"
        android:layout_centerHorizontal="true"
        android:text="Medium Text"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/silverstats"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/goldcount"
        android:layout_marginTop="10dp"
        android:layout_centerHorizontal="true"
        android:text="@string/silverstars"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:drawableLeft="@drawable/silver"
        android:drawableRight="@drawable/silver" />
    
    <TextView
        android:id="@+id/silvercount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/silverstats"
        android:text="Medium Text"
        android:textAppearance="?android:attr/textAppearanceMedium" />


    <TextView
        android:id="@+id/bronzestats"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/silvercount"
        android:layout_marginTop="10dp"
        android:layout_centerHorizontal="true"
        android:text="@string/bronzestars"
        android:textAppearance="?android:attr/textAppearanceLarge" 
        android:drawableLeft="@drawable/cupperstar"
        android:drawableRight="@drawable/cupperstar"/>

    <TextView
        android:id="@+id/bronzecount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/bronzestats"
        android:text="Medium Text"
        android:textAppearance="?android:attr/textAppearanceMedium" />
    
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:orientation="horizontal"
        android:layout_below="@+id/bronzecount"
        android:layout_marginTop="10dp"
        android:paddingTop="10dp" >
        
         <TextView
        android:id="@+id/hintsused"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hintsused"
        android:textAppearance="?android:attr/textAppearanceLarge"/>
    
    <TextView
        android:id="@+id/hintscount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Medium Text"
        android:textAppearance="?android:attr/textAppearanceMedium" />
        
        
    </LinearLayout>
    
    </RelativeLayout>
    
    </ScrollView>
   	
    

</RelativeLayout>