<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	xmlns:scrolling_image_view="http://schemas.android.com/apk/res-auto"
	android:background="@drawable/background"
	android:theme="@android:style/Theme.NoTitleBar">

     <FrameLayout
		    android:layout_width="match_parent"
		    android:layout_height="150dp"
		    android:layout_alignParentTop="true">

		 <LinearLayout
			 android:layout_width="match_parent"
			 android:layout_height="wrap_content"
			 android:orientation="vertical"
			 android:weightSum="2">
			 <FrameLayout
				 android:layout_width="match_parent"
				 android:layout_height="75dp"
				 android:layout_weight="1">
				 <com.q42.android.scrollingimageview.ScrollingImageView
					 android:id="@+id/title_red_bar"
					 android:layout_width="match_parent"
					 android:layout_height="0px"
					 android:layout_gravity="bottom"
					 scrolling_image_view:speed="1dp"
					 scrolling_image_view:src="@drawable/redbar480" />
			 </FrameLayout>

			 <FrameLayout
				 android:layout_width="match_parent"
				 android:layout_height="75dp"
				 android:layout_weight="1">
				 <com.q42.android.scrollingimageview.ScrollingImageView
					 android:id="@+id/title_blue_bar"
					 android:layout_width="match_parent"
					 android:layout_height="0px"
					 android:layout_gravity="top"
					 scrolling_image_view:speed="-1dp"
					 scrolling_image_view:src="@drawable/bluebar480"/>
			 </FrameLayout>
		 </LinearLayout>

		     <ImageView
		         android:src="@drawable/achallengebanner"
		         android:layout_width="match_parent"
		         android:layout_height="match_parent"
		         android:layout_gravity="center_horizontal"
		         android:layout_marginTop="5dp"
				 android:scaleType="fitCenter"
		         android:contentDescription="@string/hello_world"
		         android:layout_marginBottom="5dp"/>

		</FrameLayout>
		
        <Button
            android:id="@+id/startButton"
            android:layout_width="150dp"
            android:layout_height="40dp"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="170dp"
            android:text="@string/start"
            android:textSize="25sp"
			android:textColor="@color/white"
            android:background="@drawable/mainbutton"/>

        <Button
		    android:id="@+id/challengeButton"
		    android:layout_width="150dp"
		    android:layout_height="40dp"
		    android:layout_below="@+id/startButton"
		    android:layout_centerHorizontal="true"
		    android:layout_marginTop="15dp"
		    android:text="@string/challenge"
		    android:textSize="25sp"
			android:textColor="@color/white"
		    android:background="@drawable/mainbutton"/>

	<Button
		android:id="@+id/statsButton"
		android:layout_width="150dp"
		android:layout_height="40dp"
		android:layout_below="@+id/challengeButton"
		android:layout_centerHorizontal="true"
		android:layout_marginTop="15dp"
		android:text="@string/title_activity_stats"
		android:textSize="25sp"
		android:textColor="@color/white"
		android:background="@drawable/mainbutton"/>

	<Button
		android:id="@+id/optionsButton"
		android:layout_width="150dp"
		android:layout_height="40dp"
		android:layout_below="@+id/statsButton"
		android:layout_centerHorizontal="true"
		android:layout_marginTop="15dp"
		android:text="@string/options"
		android:textSize="25sp"
		android:textColor="@color/white"
		android:background="@drawable/mainbutton"/>

	<Button
		android:id="@+id/disclaimerButton"
		style="?android:attr/buttonStyleSmall"
		android:layout_width="60dp"
		android:layout_height="40dp"
		android:layout_alignParentLeft="true"
		android:layout_above="@+id/achievements"
		android:layout_marginBottom="20dp"
		android:background="@drawable/infobutton"/>
		
		
		<Button
		    android:id="@+id/rateUsButton"
		    style="?android:attr/buttonStyleSmall"
		    android:layout_width="60dp"
		    android:layout_height="40dp"
		    android:layout_alignParentRight="true"
			android:layout_above="@+id/leaderboard"
		    android:layout_marginBottom="20dp"
		    android:background="@drawable/rate_us_button"/>
		
		<Button
		    android:id="@+id/likeUsButton"
		    style="?android:attr/buttonStyleSmall"
		    android:layout_width="60dp"
		    android:layout_height="40dp"
		    android:layout_alignParentRight="true"
		    android:layout_above="@+id/rateUsButton"
		    android:layout_marginBottom="20dp"
		    android:background="@drawable/facebook_button"/>

	<Button
		android:id="@+id/musicButton"
		style="?android:attr/buttonStyleSmall"
		android:layout_width="60dp"
		android:layout_height="40dp"
		android:layout_alignParentRight="true"
		android:layout_above="@+id/likeUsButton"
		android:layout_marginBottom="20dp"
		android:background="@drawable/music_button"/>
		
			<Button
		    android:id="@+id/audioButton"
		    android:layout_width="60dp"
		    android:layout_height="40dp"
		    android:layout_alignParentLeft="true"
		    android:layout_above="@+id/disclaimerButton"
		    android:layout_marginBottom="20dp"
		    android:background="@drawable/soundbutton"/>
		
		<Button
		    android:id="@+id/vibrationButton"
		    android:layout_width="60dp"
		    android:layout_height="40dp"
		    android:layout_alignParentLeft="true"
		    android:layout_above="@+id/audioButton"
		    android:layout_marginBottom="20dp"
		    android:background="@drawable/vibration_button"/>
		
		<!-- sign-in button -->
<com.google.android.gms.common.SignInButton
    android:id="@+id/sign_in_button_frag"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
	android:visibility="gone"
    android:layout_alignParentBottom="true"
    android:layout_centerHorizontal="true"/>

<!-- sign-out button -->

			<Button
		    	android:id="@+id/achievements"
		    	android:layout_width="60dp"
				android:layout_height="40dp"
		    	android:background="@drawable/achievements_button"
				android:layout_alignParentBottom="true"
				android:layout_alignParentLeft="true"
				android:layout_alignParentStart="true"
				android:layout_marginBottom="20dp"/>

			<Button
		    	android:id="@+id/leaderboard"
		    	android:layout_width="60dp"
		    	android:layout_height="40dp"
				android:background="@drawable/leaderboards_button"
				android:layout_alignParentBottom="true"
				android:layout_alignParentRight="true"
				android:layout_alignParentEnd="true"
				android:layout_marginBottom="20dp"/>

</RelativeLayout>
