<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/lvlbackground"
    android:theme="@android:style/Theme.NoTitleBar"
    android:id="@+id/activity_character" >
    
    <LinearLayout
        android:id="@+id/buttons"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:orientation="horizontal"
        android:layout_above="@+id/progressBar1"
        android:layout_alignLeft="@+id/progressBar1"
        android:layout_alignRight="@+id/progressBar1"
        android:layout_marginBottom="5dp" >
        
        <Button 
            android:id="@+id/showhint"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="3"
            android:text="Hint"
            android:onClick="showHint"
            />
        
        <Button
            android:id="@+id/okbutton"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:onClick="checkInput"
            android:text="@string/ok" />

    </LinearLayout>

    <ProgressBar
        android:id="@+id/progressBar1"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/editText1"
        android:layout_alignRight="@+id/editText1"
        android:layout_alignLeft="@+id/editText1"
         />

    <TextView
        android:id="@+id/chardialog"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_above="@+id/characterframe"
        android:layout_marginBottom="10dp"
        android:textSize="30sp"
        android:ellipsize="marquee"
        android:fadingEdge="horizontal"
        android:marqueeRepeatLimit="marquee_forever"
        android:scrollHorizontally="true"
        android:singleLine="true"
      	android:gravity="center"
      	android:textColor="@color/white"
        android:text="@string/test"/>
    
    		
	<RelativeLayout
	    android:id="@+id/topbar"
	    android:layout_height="50dp"
	    android:layout_width="match_parent"
	    android:layout_alignParentTop="true"
	    android:background="@drawable/graybar" >
    <TextView
        android:id="@+id/scoreviewchar"
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:layout_centerHorizontal="true"
        android:ellipsize="marquee"
        android:fadingEdge="horizontal"
        android:marqueeRepeatLimit="marquee_forever"
        android:scrollHorizontally="true"
        android:singleLine="true"
      	android:gravity="center"
        android:text="@string/test"
        android:drawableLeft="@drawable/ic_launcher"
        android:textColor="@color/black"
        android:textAppearance="?android:attr/textAppearanceMedium" />
    </RelativeLayout>

    <ImageView
        android:id="@+id/characterframe"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_above="@+id/buttons"
        android:layout_marginBottom="5dp"
        android:layout_centerHorizontal="true"
        android:contentDescription="@string/dummy_content" />

    <EditText
        android:id="@+id/editText1"
        android:layout_width="fill_parent"
        android:layout_height="35dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="50dp"
        
        android:background="@color/white"
        android:inputType="text" >

        <requestFocus />
    </EditText>
    	
    <com.google.android.gms.ads.AdView 
        				 android:id="@+id/adView"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_alignParentBottom="true"
                         android:layout_centerHorizontal="true"
                         ads:adUnitId="@string/adunitid"
                         ads:adSize="SMART_BANNER"/>

    <ImageView
        android:id="@+id/prevButton"
        android:src="@drawable/izquierda"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_centerVertical="true"
        android:onClick="prevCharacter" />

    <ImageView
        android:id="@+id/nextButton"
        android:src="@drawable/derecha"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_centerVertical="true"
        android:onClick="nextCharacter" />
    
    <Button
		    android:id="@+id/audioButtonChar"
		    android:layout_width="50dp"
		    android:layout_height="50dp"
		    android:layout_below="@+id/prevButton"
		    android:onClick="audioManager"
		     />
		
		<Button
		    android:id="@+id/vibrationButtonChar"
		    android:layout_width="50dp"
		    android:layout_height="50dp"
		    android:layout_below="@+id/nextButton"
		    android:layout_alignParentRight="true"
		    android:scaleX="-1"
		    android:background="@drawable/vibrate_on"
		    android:onClick="vibrationManager"/>

</RelativeLayout>